--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>org.graylog2.log4j2</groupId>
     <artifactId>log4j2-gelf</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <name>log4j2-gelf</name>
     <description>GELF Appender for Log4j2</description>
