--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-nosql</artifactId>
+            <artifactId>log4j-core</artifactId>
             <version>${log4j2.version}</version>
         </dependency>
         <dependency>
