--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     </parent>
 
     <groupId>org.graylog2.log4j2</groupId>
-    <artifactId>log4j2-gelf-tls</artifactId>
-    <version>1.1.1</version>
+    <artifactId>log4j2-gelf</artifactId>
+    <version>1.1.1-SNAPSHOT</version>
 
     <name>log4j2-gelf</name>
     <description>GELF Appender for Log4j2</description>
