--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.0.100-beta</version>
+            <version>2.2.6</version>
             <scope>test</scope>
         </dependency>
 
